feat: update tasks endpoint & add openapi documentation
